[package]
name = "impact-bench"
version = "0.9.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node integration benchmarks."
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://impactprotocol.network"
repository = "https://github.com/GlobalBoost/substrate/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-bytes = "4.1"
clap = { version = "4.0.9", features = ["derive"] }
log = "0.4.17"
impact-primitives = { version = "2.0.0", path = "../primitives" }
impact-testing = { version = "3.0.0-dev", path = "../testing" }
impact-runtime = { version = "3.0.0-dev", path = "../runtime" }
sc-client-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/GlobalBoost/substrate.git"}
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/GlobalBoost/substrate.git"}
sp-state-machine = { version = "0.13.0", default-features = false, git = "https://github.com/GlobalBoost/substrate.git"}
serde = "1.0.136"
serde_json = "1.0.85"
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
kvdb = "0.12.0"
kvdb-rocksdb = "0.16.0"
sp-trie = { version = "7.0.0", default-features = false, git = "https://github.com/GlobalBoost/substrate.git"}
sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/GlobalBoost/substrate.git"}
sp-consensus = { version = "0.10.0-dev", default-features = false, git = "https://github.com/GlobalBoost/substrate.git"}
sc-basic-authorship = { version = "0.10.0-dev", default-features = false, git = "https://github.com/GlobalBoost/substrate.git"}
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/GlobalBoost/substrate.git"}
sp-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/GlobalBoost/substrate.git" }
sp-tracing = { version = "6.0.0", default-features = false, git = "https://github.com/GlobalBoost/substrate.git"}
hash-db = "0.15.2"
tempfile = "3.1.0"
fs_extra = "1"
rand = { version = "0.7.2", features = ["small_rng"] }
lazy_static = "1.4.0"
parity-util-mem = { version = "0.12.0", default-features = false, features = ["primitive-types"] }
parity-db = { version = "0.3" }
sc-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/GlobalBoost/substrate.git"}
sc-transaction-pool-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/GlobalBoost/substrate.git"}
futures = { version = "0.3.21", features = ["thread-pool"] }
