[package]
name = "impact-executor"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
scale-info = { version = "2.1.1", features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
impact-primitives = { version = "2.0.0", path = "../primitives" }
impact-runtime = { version = "3.0.0-dev", path = "../runtime" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-keystore = { version = "0.13.0", git = "https://github.com/paritytech/substrate.git" }
sp-state-machine = { version = "0.13.0", git = "https://github.com/paritytech/substrate.git" }
sp-tracing = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-trie = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git" }

[dev-dependencies]
criterion = "0.3.0"
futures = "0.3.21"
wat = "1.0"
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
impact-testing = { version = "3.0.0-dev", path = "../testing" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-contracts = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-im-online = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-sudo = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git"}
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-treasury = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-application-crypto = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-externalities = { version = "0.13.0", git = "https://github.com/paritytech/substrate.git" }
sp-keyring = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git" }

[features]
stress-test = []

[[bench]]
name = "bench"
harness = false
