[package]
name = "impact-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Impact node low-level primitives."
edition = "2021"
license = "Apache-2.0"
homepage = "https://impactprotocol.network"
repository = "https://github.com/GlobalBoost/impact/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-application-crypto = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
